# FileFlattener

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  installer.iss
app/: CallGraphView.cpp  CallGraphWorker.cpp  CodeAnalysisWorker.cpp  CodeGraphView.cpp  FlattenWorker.cpp  GraphView.cpp  MainWindow.cpp  main_cli.cpp  main_gui.cpp
app/dialogs/: PreviewDialog.cpp
app/include/: CallGraphView.h  CallGraphWorker.h  CodeAnalysisWorker.h  CodeGraphView.h  FlattenWorker.h  GraphView.h  MainWindow.h  PreviewDialog.h
core/: CMakeLists.txt
core/include/: CallGraphAnalyzer.h  CodeLexer.h  Deduplicator.h  FileScanner.h  FilterEngine.h  GraphModel.h  ProjectDetector.h  StructureExporter.h  ZipWriter.h
core/src/: CallGraphAnalyzer.cpp  CodeLexer.cpp  Deduplicator.cpp  FileScanner.cpp  FilterEngine.cpp  GraphModel.cpp  ProjectDetector.cpp  Renamer.cpp  StructureExporter.cpp  ZipWriter.cpp
src/: Deduplicator.cpp  FileScanner.cpp  Renamer.h  ZipWriter.h  main.cpp
